Fix for rounded avatar corners

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1110,12 +1110,12 @@ msg += "P.S. CSS can not create clickable links."
     }
 
     // Feat -> Rounded corners for avatars.
-    ._3GlyB[style] {
+    ._3g4Pn[style] {
         /// Global/shared contacts.
         &, /._3PdFH { c: 0 0 bg5 }
 
         /// Avatars/images/new group/contact avatar/your avatar.
-        &, > img, /._3GlyB, /._8hzr9, /._1TGpC, /.gDU26 {
+        &, > img, /._3g4Pn, /._1jLYl, /._1PAkz {
             rad: var(--r-avatars) i
         }
 
