--- a/wa.user.styl
+++ b/wa.user.styl
@@ -69,12 +69,7 @@
 }
 
 @var range    emoji_o    'Emoji opacity' [0.8, 0.0, 1, 0.01]
-@var select   emoji_b    'Reduce big emoji size' {
-    'Default *': 'default ',
-    'Medium   ': 'medium  ',
-    'Normal   ': 'normal  ',
-    'Small    ': 'small   ',
-}
+@var range    emoji_b    'Reduce big emoji size' [48, 20, 48, 4, "px"]
 @var checkbox emoji_a    'Animate emojis' 1
 @var text     emoji_k    'Emojis with kiss animation' "'💋'"
 @var text     emoji_p    'Emojis with pulse animation' "'🤩' '😍' '☺️' '❣️' '♥️' '❤️'"
@@ -1901,54 +1896,38 @@ msg += "P.S. CSS can not create clickable links."
 
     // Main -> Chat message bubbles.
     .message {
-        /// Big emojis.
-        big = '._3B8qp'
-
         &-in, &-out {
             /// Feat -> Message tails.
             if (tail_style == 'rounded' || tail_style == 'minimal') {
                 [data-icon *= 'tail'] {
                     display: none i
+
+                    // Tweak corners in regular/group chats.
                     if (tail_style == 'rounded') {
-                        /// 1:    First message
-                        /// 2, 3: Sticker senders
-                        + div { &, /._3ToB1, /._1nrJA { rad: 7.5px i }}
+                        + div, + div[data-testid] + div { rad: 7.5px i }
                     }
                 }
             }
 
-            /// Feat -> Reduce size of big emojis.
-            if (emoji_b == 'medium') {
-                size = 36px
-            } else if (emoji_b == 'normal') {
-                size = 28px
-            } else if (emoji_b == 'small') {
-                size = 20px
-            }
-
-            /// Apply to all emoji options except the default one.
-            if (emoji_b != 'default') {
-                { big } {
-                    margin: 0 i
-                    padding-top: 2px i
-                    z-index: 0 i
-
-                    /// Reset emojis.
-                    span {
-                        margin: 0 i
-                        /// All emojis / Heart emoji.
-                        > img, ../ div > img {
-                            width: size i
-                            height: size i
-                        }
+            /// Feat -> Reduce big emoji size.
+            img {
+                &[alt="❤️"],
+                &[src^='/img'][src$='-40.png'],
+                &[src^='/img'][src$='-64.png'] {
+                    if (emoji_b != "48px") {
+                        width: emoji_b i
+                        height: emoji_b i
                     }
                 }
-            } else {
-                { big } { padding-bottom: 0 }
-            }
 
-            /// Increase minimum width for message bubbles.
-            > div:nth-child(2) { min-width: 56px }
+                // Add padding before timestamp.
+                ../ .copyable-text.selectable-text {
+                    &:has([src^='/img'][src$='-40.png']),
+                    &:has([src^='/img'][src$='-64.png']) {
+                        margin: 0 57px 0 0 i
+                    }
+                }
+            }
         }
 
         /// Feat -> Swap message bubble positions.
