--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://userstyles.world/api/style/4.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.7.1
+@version      3.7.2
 @license      MIT
 @preprocessor stylus
 
@@ -351,7 +351,7 @@ msg += "P.S. CSS can not create clickable links."
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info.
-        --version: '🌚 Dark-WhatsApp v3.7.1 — January 15th, 2023'
+        --version: '🌚 Dark-WhatsApp v3.7.2 — March 31st, 2023'
 
         /// UI font.
         --ui-font: ui_font, Segoe UI, Helvetica Neue, Helvetica, Lucida Grande,
