vars: remap some new color variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -444,6 +444,7 @@ msg += "P.S. CSS can not create clickable links."
         --green-deep-rgb: var(--ac-2-rgb) //27,154,89;
         --blue-ocean: var(--bg-2) //#aadaff;
         --blue-ocean-rgb: var(--bg-2-rgb) //#aadaff;
+        --archived-chat-persistent-header-background: var(--ac-0) //#00af9c;
         --active-tab-marker: var(--ac-0) //#00af9c;
         --active-tab-marker-rgb: var(--ac-0-rgb) //0,175,156;
         --app-background-stripe: var(--bg-1) //#091e1f;
@@ -898,6 +899,7 @@ msg += "P.S. CSS can not create clickable links."
         --reactions-tray-background-rgb: var(--bg-3-rgb) //34,46,53;
         --reactions-tray-active-round-background: var(--bg-5) //hsl(204, 17.5%, 28%);
         --reactions-tray-active-round-background-rgb: var(--bg-5-rgb) //59,74,84;
+        --reactions-panel-background-color: var(--bg-3) //hsl(202.1, 21.8%, 17.1%);
         --reactions-picker-bg: var(--bg-4) //hsl(202.2, 11.7%, 45.3%);
         --reactions-picker-bg-rgb: var(--bg-4-rgb) //102,119,129;
         --svg-gray-button: var(--fg-3) //hsl(204, 22.7%, 17.3%);
