--- a/wa.user.styl
+++ b/wa.user.styl
@@ -900,6 +900,7 @@ msg += "P.S. CSS can not create clickable links."
         --reactions-tray-active-round-background-rgb: var(--bg-5-rgb) //59,74,84;
         --reactions-picker-bg: var(--bg-4) //hsl(202.2, 11.7%, 45.3%);
         --reactions-picker-bg-rgb: var(--bg-4-rgb) //102,119,129;
+        --reactions-panel-background-color: var(--bg-3) // #fff
         --svg-gray-button: var(--fg-3) //hsl(204, 22.7%, 17.3%);
         --svg-gray-button-rgb: var(--fg-3-rgb) //34,46,54;
         --text-primary-strong: var(--fg-1) //hsl(200, 15.8%, 92.5%);
