fix new search input container background

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -800,6 +800,8 @@ msg += "P.S. CSS can not create clickable links."
         --search-container-background-rgb: var(--bg-2-rgb) //18.6,28.22,33.4;
         --search-input-background: var(--bg-3) //#2a2f32;
         --search-input-background-rgb: var(--bg-3-rgb) //41.6,47.46667,50.4;
+        --search-input-container-background: var(--bg-1) //#000;
+        --search-input-container-background-rgb: var(--bg-1-rgb) //0,0,0;
         --secondary: var(--fg-3) //#f1f1f299;
         --secondary-rgb: var(--fg-3-rgb) //241,241,242;
         --secondary-light: var(--fg-2) //#f1f1f240;
